--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
                 har vi lagt totalt 4 sider: denne index-siden, to artikkelsider, en som omhandler Oslomet campus, og et angående 
                 sidens inklusiv design og hvordan vi har prøvd å gjøre nettsiden mer tilgjengelig og brukervennlig. Tilslutt har vi en emneside 
                 som handler om smarttelefoner. Denne siden har annerledes utforming og omhandler noe helt annet enn Oslomet.</p>
-                <h3>Gruppemedlemmer:272, 129, 304, 285</h3>
-
             </div>
+            
         </div>
         <!-- Overskrift for framhevet artikler -->
-        <div class="new-tabs headings">
+        <div class="new-tabs-headings">
             <h2>Artikler</h2>
         </div>
         <!-- Framhevet artikler i index-siden -->
