--- a/topical.html
+++ b/topical.html
@@ -49,7 +49,7 @@
             <p class="tekstvideo"> 
                 Universal design is an important approach that aims to create inclusive
                 and accessible products, environments, and services for a wide range of
-                individuals, regardless of their physical or cognitive abilitie
+                individuals, regardless of their physical or cognitive abilities.
 
             </p>
         </div>
@@ -71,8 +71,8 @@
                         <p>   Norwegian government chooses to implement the European Accessibility Act
                             into Norwegian law and is prepared to issue large fines for digital services,
                             or devices that do not comply and adapt to the
-                            basic principles of universal design.
-                            <a href="https://ec.europa.eu/social/main.jsp?catId=1202#:~:text=The%20European%20accessibility%20act%20is,divergent%20rules%20in%20Member%20States."
+                            basic principles of universal design. Read more about
+                            <a class="topicallinks" href="https://ec.europa.eu/social/main.jsp?catId=1202#:~:text=The%20European%20accessibility%20act%20is,divergent%20rules%20in%20Member%20States."
                     target="_blank">European Accessibility Act.
                     </a>
                         </p>
@@ -91,9 +91,9 @@
                         </h2>
                         <p>Universal design is based on creating products that ensure
                             accessibility and usability for all people no matter their
-                            situation or state.
-                            <a href="https://universaldesign.ie/what-is-universal-design/"
-                    target="_blank">What is Universal Design</a>       
+                            situation or state. For more about universal design visit
+                            <a class="topicallinks"  href="https://universaldesign.ie/what-is-universal-design/"
+                    target="_blank">Universal Design.</a>       
                         </p>
                     </div>
                 </div>
@@ -105,7 +105,8 @@
                             <img src="images/notatbok.jpg" alt="Picture of main">
                         </figure>
                         <h2 class="topical-h2">
-                            Important</h2>
+                            Important
+                        </h2>
                         <p> Simple and Intuitive Use: The design should be easy to understand,
                             regardless of the user's experience, knowledge, language skills,
                             or current concentration level. 
@@ -155,9 +156,9 @@
                     companies have to adapt and change their products, but in the long term more people will 
                     be able to use the products which will accelerate the technological digitalization. 
                     Also, smaller businesses could find it harder to get products approved since they do 
-                    not have the money and competence to develop these types of products.
-                    <a href="https://www.insiderintelligence.com/insights/mobile-users-smartphone-usage/"
-                    target="_blank">Smartphone.
+                    not have the money and competence to develop these types of products. Read more about
+                    <a class="topicallinks"  href="https://www.insiderintelligence.com/insights/mobile-users-smartphone-usage/"
+                    target="_blank">smartphone usage.
                     </a>
                     </p>
                 </div>
