--- a/accessibility.html
+++ b/accessibility.html
@@ -47,7 +47,7 @@
             <div class="item">
                 <h1 class="campus-overskrift">Tilgjengelighet</h1>
                 <p class="campus-intro">
-                    Tilgjengelighet handler om å tilrettelegge for, uavhengig av evner eller funksjonshemminger, kan få tilgang til og samhandle med et produkt, 
+                    Tilgjengelighet handler om å tilrettelegge for uavhengig av evner eller funksjonshemminger, kan få tilgang til og samhandle med et produkt, 
                     en tjeneste eller et miljø. Det handler om å fjerne barrierer og skape inkluderende design slik at alle kan delta,
                     bidra og nyte uten begrensninger. Dette gjelder ulike aspekter av livet, fra nettsider og teknologi til fysiske rom og kommunikasjon.
                 </p>
@@ -65,24 +65,24 @@
                     Kodevalg for unviersal utforming
                 </h2>
                 <p class="campus-intro">
-                    Vi har utviklet denne nettsiden med tanke på universell utforming. Tydelig titler og avsnitt er nøye organisert.
+                    Vi har utviklet denne nettsiden med tanke på universell utforming. Tydelige titler og avsnitt er nøye organisert.
                     I designprosessen for sidene utarbeidet vår gruppe først en layout for det visuelle uttrykket, 
                     etterfulgt av utvikling av CSS for å realisere designet. Hver side er inndelt i tre hoveddeler, en header, innhold og en footer.
                     Nav har et enkel design, med logoen plassert på den ene siden og nedtrykksmeny på den andre.
-                    innholdet er strukturert i klonner og er inspirert av blogginnlegg.
+                    Innholdet er strukturert i kolonner og er inspirert av blogginnlegg.
                     </p>
                     <p class="campus-intro">
                         I sidene våres har vi tatt i bruk sematiske tagger som header,nav, section, article og footer. 
-                    Dette gjør det lettere for folk som bruker screen reader forstår inneholdet i siden vårt. I tillegg har vi gjort sånn at det er
-                    lesebar for alle hvor vi har gode nok linjeøyde, skriftstørrelse og bokstavavstann i tekstene våres. Vi har også valgt å velge
+                    Dette gjør det lettere for folk som bruker screen reader å forstå inneholdet i siden vårt. I tillegg har vi gjort sånn at det er
+                    lesbart for alle hvor vi har gode nok linjeavstand, skriftstørrelse og bokstavstand i tekstene våres. Vi har også valgt
                     farger som fargeblinde også kan se. 
 
                     </p>
                    <p class="campus-intro">
-                    Nettsiden vår brukervennlig, og det er tydelig hvilken side man befinner seg på. 
+                    Nettsiden vår brukervennlig og det er tydelig hvilken side man befinner seg på. 
                     Navigasjonen forenkler betydelig og det er mulig å navigere rundt ved hjelp av tastaturet på grunn av tabindex i overskrifter og
                     avsnitter. I tillegg har vi gjort slik
-                    at naven vår er fixed på grunn av det blir mer effektivt å navigere og dette gjør siden vår enda mer tilgjenglig.
+                    at naven vår er fixed slik at det blir enklere å navigere seg og dette gjør siden vår enda mer tilgjengelig.
                     </p>
              </div>
                 <img class="campus-img" src="./images/acces.png" alt="" >
@@ -94,17 +94,17 @@
          Hvordan vi har testet koden (21.11.2023)
          </h2>
     <p class="campus-intro">
-        Vi har brukt to verktøy for å teste koden vår, disse var <a href="https://validator.w3.org/">W3C validator</a> 
+        Vi har brukt to verktøy for å teste koden vår, disse var <a class="linksaccessebility" href="https://validator.w3.org/">W3C validator</a> 
         og <a href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave Evaluation Tool</a>. 
         Disse verktøy hjalp oss med å avdekket feil som vi ikke umiddelbart oppdaget. 
-        For å validere og kontrolle koden vår i HTML og CSS brutke vi <a href="https://validator.w3.org/">W3C validator</a>. 
+        For å validere og kontrolle koden vår i HTML og CSS brukte vi <a href="https://validator.w3.org/">W3C validator</a>. 
         Denne hjalp oss å finne feil i koden og ting som var undøvendig å ha med.  
     </p>
         <p class="campus-intro">
-        For å sikre tilgjengeligheten brukte vi <a href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave Evaluation Tool</a>.
-        Dette verktøyet evaluerer om nettsiden vår er tilgjengelig for alle brukere.Under testingen ble det avdekket noen feil meldinger, dette kom av ikonene vi har på footeren.
+        For å sikre tilgjengeligheten brukte vi <a class="linksaccessebility" href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave Evaluation Tool</a>.
+        Dette verktøyet evaluerer om nettsiden vår er tilgjengelig for alle brukere. Under testingen ble det avdekket noen feilmeldinger, dette kom av ikonene vi har på footeren.
         Testen viste at "linken ikke hadde tekst". For å løse dette probleme la vi inn "aria-label", den gir en beskrivende tekst som skjermleseren kan lese opp. 
-        Dette bidrar ikke bare å rette opp tilgjengelighetsfeilen, men også gir også bedre informasjon til brukere som bruker skjermlesere eller annet hjelpeteknologi.
+        Dette bidrar ikke bare å rette opp tilgjengelighetsfeilen, men gir også bedre informasjon til brukere som bruker skjermlesere eller annen hjelpeteknologi.
     </p>
 </div>
     <img class="campus-img" src="images/valedering.png" alt="Bilde av testen av siden">
