--- a/accessibility.html
+++ b/accessibility.html
@@ -48,7 +48,7 @@
                 <h1 class="campus-overskrift">Tilgjengelighet</h1>
                 <p class="campus-intro">
                     Tilgjengelighet handler om å tilrettelegge for uavhengig av evner eller funksjonshemminger, kan få tilgang til og samhandle med et produkt, 
-                    en tjeneste eller et miljø. Det handler om å fjerne barrierer og skape inkluderende design slik at alle kan delta,
+                    en tjeneste eller et miljø. Det handler om å fjerne barrierer og skape inkluderende design slik at alle kan delta, 
                     bidra og nyte uten begrensninger. Dette gjelder ulike aspekter av livet, fra nettsider og teknologi til fysiske rom og kommunikasjon.
                 </p>
             </div>
@@ -62,7 +62,7 @@
             <div class="campus-container">
                 <div class="item">
                 <h2 class="campus-overskrift">
-                    Kodevalg for unviersal utforming
+                    Kodevalg for universell utforming
                 </h2>
                 <p class="campus-intro">
                     Vi har utviklet denne nettsiden med tanke på universell utforming. Tydelige titler og avsnitt er nøye organisert.
