--- a/accessibility.html
+++ b/accessibility.html
@@ -85,7 +85,7 @@
                     at naven vår er fixed slik at det blir enklere å navigere seg og dette gjør siden vår enda mer tilgjengelig.
                     </p>
              </div>
-                <img class="campus-img" src="./images/acces.png" alt="" >
+                <img class="campus-img" src="./images/acces.png" alt="bilde av koden" >
 
             </div>
             <div class="campus-container">
@@ -117,7 +117,7 @@
         <div class="container-footer">
             <div class="logo-kolonne">
                 <a href="#" class="logo-footer">
-                    <img class="nav-logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
+                    <img class="nav-logo" alt="OsloMet logo i gul" src="images/logo_oslomet_gul.png">
                 </a>
 
                 <ul class="sosiale-medier">
