--- a/topical.html
+++ b/topical.html
@@ -176,7 +176,7 @@
         <div class="container-footer">
             <div class="logo-kolonne">
                 <a href="#" class="logo-footer">
-                    <img class="nav-logo" alt="OsloMet logo" src="images/logo_oslomet_gul.png">
+                    <img class="nav-logo" alt="OsloMet logo i gul" src="images/logo_oslomet_gul.png">
                 </a>
 
                 <ul class="sosiale-medier">
