--- a/accessibility.html
+++ b/accessibility.html
@@ -81,8 +81,9 @@
                    <p class="campus-intro">
                     Nettsiden vår brukervennlig og det er tydelig hvilken side man befinner seg på. 
                     Navigasjonen forenkler betydelig og det er mulig å navigere rundt ved hjelp av tastaturet på grunn av tabindex i overskrifter og
-                    avsnitter. I tillegg har vi gjort slik
-                    at naven vår er fixed slik at det blir enklere å navigere seg og dette gjør siden vår enda mer tilgjengelig.
+                    avsnitter. I tillegg har vi gjort det slik
+                    at naven vår er fixed, slik at det blir enklere å navigere seg og dette gjør siden vår enda mer tilgjengelig.
+                    Med fixed nav kan brukeren av nettsiden gå til en av de andre sidene, uten å måtte bla helt til toppen igjen. 
                     </p>
              </div>
                 <img class="campus-img" src="./images/acces.png" alt="bilde av koden" >
@@ -95,9 +96,9 @@
          </h2>
     <p class="campus-intro">
         Vi har brukt to verktøy for å teste koden vår, disse var <a class="linksaccessebility" href="https://validator.w3.org/">W3C validator</a> 
-        og <a href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave Evaluation Tool</a>. 
+        og <a class="linksaccessebility" href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave Evaluation Tool</a>. 
         Disse verktøy hjalp oss med å avdekket feil som vi ikke umiddelbart oppdaget. 
-        For å validere og kontrolle koden vår i HTML og CSS brukte vi <a href="https://validator.w3.org/">W3C validator</a>. 
+        For å validere og kontrolle koden vår i HTML og CSS brukte vi <a class="linksaccessebility" href="https://validator.w3.org/">W3C validator</a>. 
         Denne hjalp oss å finne feil i koden og ting som var undøvendig å ha med.  
     </p>
         <p class="campus-intro">
