--- a/topical.html
+++ b/topical.html
@@ -205,7 +205,7 @@
             </div>
 
             <div class="adresse-kolonne">
-                <h3 class="adresse-tittel">Kontakt oss</h3>
+                <h3 class="adresse-tittel"> Contact</h3>
                 <address class="kontakt">
                     <p class="address">
                         Pilestredet 35. Studenttorget
