--- a/topical.html
+++ b/topical.html
@@ -109,9 +109,7 @@
                         </h2>
                         <p> Simple and Intuitive Use: The design should be easy to understand,
                             regardless of the user's experience, knowledge, language skills,
-                            or current concentration level. For more information about the
-                            <a class="topicallinks"  href="https://www.washington.edu/doit/what-universal-design-0"
-                    target="_blank">principles of universal design.
+                            or current concentration level.
                         </p>
                     </div>
                 </div>
