--- a/topical.html
+++ b/topical.html
@@ -161,6 +161,10 @@
                     target="_blank">smartphone usage.
                     </a>
                     </p>
+                    <p> For more information about the
+                        <a class="topicallinks"  href="https://www.washington.edu/doit/what-universal-design-0"
+                        target="_blank">principles of universal design.
+                    </p>
                 </div>
     
                 <div class="phone-box">
