--- a/campus.html
+++ b/campus.html
@@ -236,7 +236,7 @@
                 </p>
                 <p class="adresse-link">
                     <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a>
-                    <a class="footer-link" href="mailto:hello@omnifood.com">Oslomet@test.com</a>
+                    <a class="footer-link" href="mailto:Oslomet@test.com">Oslomet@test.com</a>
                 </p>
             </address>
         </div>
