--- a/topical.html
+++ b/topical.html
@@ -161,10 +161,6 @@
                     target="_blank">smartphone usage.
                     </a>
                     </p>
-                    <p> For more information about the
-                        <a class="topicallinks"  href="https://www.washington.edu/doit/what-universal-design-0"
-                        target="_blank">principles of universal design.
-                    </p>
                 </div>
     
                 <div class="phone-box">
@@ -216,7 +212,7 @@
                     </p>
                     <p class="adresse-link">
                         <a class="footer-link" href="tel:67-45-78-00">67-45-78-00</a>
-                        <a class="footer-link" href="mailto:hello@omnifood.com">Oslomet@test.com</a>
+                        <a class="footer-link" href="mailto:Oslomet@test.com">Oslomet@test.com</a>
                     </p>
                 </address>
             </div>
