--- a/accessibility.html
+++ b/accessibility.html
@@ -1,18 +1,20 @@
-
 <!DOCTYPE html>
 <html lang="nn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="./css/stylesheet.css" rel="stylesheet" >
+    <link href="./css/stylesheet.css" rel="stylesheet">
     <!--Lenke til fontawsome for å bruke sosial medier ikoner-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Lenker til fonter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Nunito&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Nunito&family=Roboto&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <!-- Header og navigasjonsbar start -->
     <div class="index-header">
@@ -21,21 +23,21 @@
             <img src="images/svart_logo_oslomet.png" alt="Oslomet-logo i svart">
         </picture>
         <nav>
-            <ul class="navigations">                                  
-                    <!-- Dropdown-meny start-->
-                    <li class="nav-buttons dropmenu">   
-                        <a class="dropbutton">
-                            <!-- meny-ikon -->
-                            <i class="fa fa-bars"></i>
-                        </a>
-                        <div class="dropmenu-content">
-                            <a href="./index.html">Home</a>
-                            <a href="./campus.html">Our campus</a>
-                            <a href="./accessibility.html">Accessibility</a>
-                            <a href="./topical.html">Topical page</a>
-                          </div>
-                    </li>
-                    <!-- Dropdown-meny slutt -->
+            <ul class="navigations">
+                <!-- Dropdown-meny start-->
+                <li class="nav-buttons dropmenu">
+                    <a class="dropbutton">
+                        <!-- meny-ikon -->
+                        <i class="fa fa-bars"></i>
+                    </a>
+                    <div class="dropmenu-content">
+                        <a href="./index.html">Home</a>
+                        <a href="./campus.html">Our campus</a>
+                        <a href="./accessibility.html">Accessibility</a>
+                        <a href="./topical.html">Topical page</a>
+                    </div>
+                </li>
+                <!-- Dropdown-meny slutt -->
             </ul>
         </nav>
     </div>
@@ -44,75 +46,95 @@
 
         <section>
             <div class="campus-container">
-            <div class="item">
-                <h1 class="campus-overskrift">Tilgjengelighet</h1>
-                <p class="campus-intro">
-                    Tilgjengelighet handler om å tilrettelegge for uavhengig av evner eller funksjonshemminger, kan få tilgang til og samhandle med et produkt, 
-                    en tjeneste eller et miljø. Det handler om å fjerne barrierer og skape inkluderende design slik at alle kan delta, 
-                    bidra og nyte uten begrensninger. Dette gjelder ulike aspekter av livet, fra nettsider og teknologi til fysiske rom og kommunikasjon.
-                </p>
-            </div>
-    <!--Foto: fra nettsiden pexel.com. Foto av unplash. link til siden:https://unsplash.com/photos/person-holding-black-plastic-case-HE1zW44Zm_Y-->
+                <div class="item">
+                    <h1 class="campus-overskrift">Tilgjengelighet</h1>
+                    <p class="campus-intro">
+                        Tilgjengelighet handler om å tilrettelegge for uavhengig av evner eller funksjonshemminger, kan
+                        få tilgang til og samhandle med et produkt,
+                        en tjeneste eller et miljø. Det handler om å fjerne barrierer og skape inkluderende design slik
+                        at alle kan delta,
+                        bidra og nyte uten begrensninger. Dette gjelder ulike aspekter av livet, fra nettsider og
+                        teknologi til fysiske rom og kommunikasjon.
+                    </p>
+                </div>
+                <!--Foto: fra nettsiden pexel.com. Foto av unplash. link til siden:https://unsplash.com/photos/person-holding-black-plastic-case-HE1zW44Zm_Y-->
 
-    <img src="images/sigmund-HE1zW44Zm_Y-unsplash.jpg" alt="bilde som viser PC som tilpasser for disability">
+                <img src="images/sigmund-HE1zW44Zm_Y-unsplash.jpg"
+                    alt="bilde som viser PC som tilpasser for disability">
             </div>
         </section>
 
         <section>
             <div class="campus-container">
                 <div class="item">
-                <h2 class="campus-overskrift">
-                    Kodevalg for universell utforming
-                </h2>
-                <p class="campus-intro">
-                    Vi har utviklet denne nettsiden med tanke på universell utforming. Tydelige titler og avsnitt er nøye organisert.
-                    I designprosessen for sidene utarbeidet vår gruppe først en layout for det visuelle uttrykket, 
-                    etterfulgt av utvikling av CSS for å realisere designet. Hver side er inndelt i tre hoveddeler, en header, innhold og en footer.
-                    Nav har et enkel design, med logoen plassert på den ene siden og nedtrykksmeny på den andre.
-                    Innholdet er strukturert i kolonner og er inspirert av blogginnlegg.
+                    <h2 class="campus-overskrift">
+                        Kodevalg for universell utforming
+                    </h2>
+                    <p class="campus-intro">
+                        Vi har utviklet denne nettsiden med tanke på universell utforming. Tydelige titler og avsnitt er
+                        nøye organisert.
+                        I designprosessen for sidene utarbeidet vår gruppe først en layout for det visuelle uttrykket,
+                        etterfulgt av utvikling av CSS for å realisere designet. Hver side er inndelt i tre hoveddeler,
+                        en header, innhold og en footer.
+                        Nav har et enkel design, med logoen plassert på den ene siden og nedtrykksmeny på den andre.
+                        Innholdet er strukturert i kolonner og er inspirert av blogginnlegg.
                     </p>
                     <p class="campus-intro">
-                        I sidene våres har vi tatt i bruk sematiske tagger som header,nav, section, article og footer. 
-                    Dette gjør det lettere for folk som bruker screen reader å forstå inneholdet i siden vårt. I tillegg har vi gjort sånn at det er
-                    lesbart for alle hvor vi har gode nok linjeavstand, skriftstørrelse og bokstavstand i tekstene våres. Vi har også valgt
-                    farger som fargeblinde også kan se. 
+                        I sidene våres har vi tatt i bruk sematiske tagger som header,nav, section, article og footer.
+                        Dette gjør det lettere for folk som bruker screen reader å forstå inneholdet i siden vårt. I
+                        tillegg har vi gjort sånn at det er
+                        lesbart for alle hvor vi har gode nok linjeavstand, skriftstørrelse og bokstavstand i tekstene
+                        våres. Vi har også valgt
+                        farger som fargeblinde også kan se.
 
                     </p>
-                   <p class="campus-intro">
-                    Nettsiden vår brukervennlig og det er tydelig hvilken side man befinner seg på. 
-                    Navigasjonen forenkler betydelig og det er mulig å navigere rundt ved hjelp av tastaturet på grunn av tabindex i overskrifter og
-                    avsnitter. I tillegg har vi gjort det slik
-                    at naven vår er fixed, slik at det blir enklere å navigere seg og dette gjør siden vår enda mer tilgjengelig.
-                    Med fixed nav kan brukeren av nettsiden gå til en av de andre sidene, uten å måtte bla helt til toppen igjen. 
+                    <p class="campus-intro">
+                        Nettsiden vår brukervennlig og det er tydelig hvilken side man befinner seg på.
+                        Navigasjonen forenkler betydelig og det er mulig å navigere rundt ved hjelp av tastaturet på
+                        grunn av tabindex i overskrifter og
+                        avsnitter. I tillegg har vi gjort det slik
+                        at naven vår er fixed, slik at det blir enklere å navigere seg og dette gjør siden vår enda mer
+                        tilgjengelig.
+                        Med fixed nav kan brukeren av nettsiden gå til en av de andre sidene, uten å måtte bla helt til
+                        toppen igjen.
                     </p>
-             </div>
-                <img class="campus-img" src="./images/acces.png" alt="bilde av koden" >
+                </div>
+                <img class="campus-img" src="./images/acces.png" alt="bilde av koden">
 
             </div>
             <div class="campus-container">
-            <div class="item">
-        <h2 class="campus-overskrift">
-         Hvordan vi har testet koden (21.11.2023)
-         </h2>
-    <p class="campus-intro">
-        Vi har brukt to verktøy for å teste koden vår, disse var <a class="linksaccessebility" href="https://validator.w3.org/">W3C validator</a> 
-        og <a class="linksaccessebility" href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave Evaluation Tool</a>. 
-        Disse verktøy hjalp oss med å avdekket feil som vi ikke umiddelbart oppdaget. 
-        For å validere og kontrolle koden vår i HTML og CSS brukte vi <a class="linksaccessebility" href="https://validator.w3.org/">W3C validator</a>. 
-        Denne hjalp oss å finne feil i koden og ting som var undøvendig å ha med.  
-    </p>
-        <p class="campus-intro">
-        For å sikre tilgjengeligheten brukte vi <a class="linksaccessebility" href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave Evaluation Tool</a>.
-        Dette verktøyet evaluerer om nettsiden vår er tilgjengelig for alle brukere. Under testingen ble det avdekket noen feilmeldinger, dette kom av ikonene vi har på footeren.
-        Testen viste at "linken ikke hadde tekst". For å løse dette probleme la vi inn "aria-label", den gir en beskrivende tekst som skjermleseren kan lese opp. 
-        Dette bidrar ikke bare å rette opp tilgjengelighetsfeilen, men gir også bedre informasjon til brukere som bruker skjermlesere eller annen hjelpeteknologi.
-    </p>
-</div>
-    <img class="campus-img" src="images/valedering.png" alt="Bilde av testen av siden">
+                <div class="item">
+                    <h2 class="campus-overskrift">
+                        Hvordan vi har testet koden (21.11.2023)
+                    </h2>
+                    <p class="campus-intro">
+                        Vi har brukt to verktøy for å teste koden vår, disse var <a class="linksaccessebility"
+                            href="https://validator.w3.org/">W3C validator</a>
+                        og <a class="linksaccessebility"
+                            href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave
+                            Evaluation Tool</a>.
+                        Disse verktøy hjalp oss med å avdekket feil som vi ikke umiddelbart oppdaget.
+                        For å validere og kontrolle koden vår i HTML og CSS brukte vi <a class="linksaccessebility"
+                            href="https://validator.w3.org/">W3C validator</a>.
+                        Denne hjalp oss å finne feil i koden og ting som var undøvendig å ha med.
+                    </p>
+                    <p class="campus-intro">
+                        For å sikre tilgjengeligheten brukte vi <a class="linksaccessebility"
+                            href="https://chromewebstore.google.com/detail/wave-evaluation-tool/jbbplnpkjmmeebjpijfedlgcdilocofh?pli=1">Wave
+                            Evaluation Tool</a>.
+                        Dette verktøyet evaluerer om nettsiden vår er tilgjengelig for alle brukere. Under testingen ble
+                        det avdekket noen feilmeldinger, dette kom av ikonene vi har på footeren.
+                        Testen viste at "linken ikke hadde tekst". For å løse dette probleme la vi inn "aria-label", den
+                        gir en beskrivende tekst som skjermleseren kan lese opp.
+                        Dette bidrar ikke bare å rette opp tilgjengelighetsfeilen, men gir også bedre informasjon til
+                        brukere som bruker skjermlesere eller annen hjelpeteknologi.
+                    </p>
+                </div>
+                <img class="campus-img" src="images/valedering.png" alt="Bilde av testen av siden">
 
-</div>       
+            </div>
         </section>
-      
+
     </main>
     <footer class="footer">
         <div class="container-footer">
@@ -123,23 +145,25 @@
 
                 <ul class="sosiale-medier">
                     <li>
-                        <a class="sosiale-link" href="https://www.facebook.com/oslomet/"  aria-label="Ikon til facebook">
+                        <a class="sosiale-link" href="https://www.facebook.com/oslomet/" aria-label="Ikon til facebook">
                             <i class="fab fa-facebook"></i> <!--facebook-ikon -->
                         </a>
 
                     </li>
                     <li>
-                        <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb"  aria-label="Ikon til instagram">
+                        <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb"
+                            aria-label="Ikon til instagram">
                             <i class="fab fa-instagram"></i><!-- instagram-ikon -->
                         </a>
                     </li>
                     <li>
-                        <a class="sosiale-link" href="https://twitter.com/oslomet"  aria-label="Ikon til twitter">
+                        <a class="sosiale-link" href="https://twitter.com/oslomet" aria-label="Ikon til twitter">
                             <i class="fab fa-twitter"></i> <!-- Twitter-ikon -->
                         </a>
                     </li>
                     <li>
-                        <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/"  aria-label="Ikon til linkedin">
+                        <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/"
+                            aria-label="Ikon til linkedin">
                             <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
                         </a>
                     </li>
@@ -163,9 +187,5 @@
     </footer>
 
 </body>
+
 </html>
-
-
-        
-
-
