--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="nn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link href="./css/stylesheet.css" rel="stylesheet" >
+    <link href="./css/stylesheet.css" rel="stylesheet">
     <!--Lenke til fontawsome for å bruke sosial medier ikoner-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Lenker til fonter -->
@@ -13,18 +14,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Nunito&family=Roboto&display=swap"
         rel="stylesheet">
 </head>
+
 <body>
-  
-   <!-- Header og navigasjonsbar start -->
-<div class="index-header">
-    <picture class="nav-logo">
-        <!-- Logo kilde: https://foto.oslomet.no/fotoweb/archives/5005-OsloMet-logo/Folder%2052/Logomedsignatur_gul_OsloMet-01.png.info -->
-        <img src="./images/svart_logo_oslomet.png" alt="Oslomet-logo i svart">
-    </picture>
-    <nav>
-        <ul class="navigations">                                  
+
+    <!-- Header og navigasjonsbar start -->
+    <div class="index-header">
+        <picture class="nav-logo">
+            <!-- Logo kilde: https://foto.oslomet.no/fotoweb/archives/5005-OsloMet-logo/Folder%2052/Logomedsignatur_gul_OsloMet-01.png.info -->
+            <img src="./images/svart_logo_oslomet.png" alt="Oslomet-logo i svart">
+        </picture>
+        <nav>
+            <ul class="navigations">
                 <!-- Dropdown-meny start-->
-                <li class="nav-buttons dropmenu">   
+                <li class="nav-buttons dropmenu">
                     <a class="dropbutton">
                         <!-- meny-ikon -->
                         <i class="fa fa-bars"></i>
@@ -34,38 +36,43 @@
                         <a href="./campus.html">Our campus</a>
                         <a href="./accessibility.html">Accessibility</a>
                         <a href="./topical.html">Topical page</a>
-                      </div>
+                    </div>
                 </li>
                 <!-- Dropdown-meny slutt -->
-        </ul>
-    </nav>
-</div>
-<!-- Header og navigasjonsbar slutt -->
-<!-- Header og navigasjonsbar slutt -->
+            </ul>
+        </nav>
+    </div>
+    <!-- Header og navigasjonsbar slutt -->
+    <!-- Header og navigasjonsbar slutt -->
     <!-- Hovedside innhold start -->
     <div class="index-content">
         <!-- hovedbilde på index-siden -->
-        <picture class="index-image"> 
+        <picture class="index-image">
             <!-- Foto: https://foto.oslomet.no/fotoweb/archives/5007-Arkitektur-ved-OsloMet/Folder%2052/P35.jpg.info -->
-            <img src="./images/P35-2400-1200.jpeg" alt="Fasadebilde fra P35 i Oslo. Bilde tatt av Benjamin A. Ward/OsloMet">
+            <img src="./images/P35-2400-1200.jpeg"
+                alt="Fasadebilde fra P35 i Oslo. Bilde tatt av Benjamin A. Ward/OsloMet">
         </picture>
         <!-- hovedinnholdet på index-siden -->
         <div class="index-intro">
             <h1>Velkommen til Oslomet</h1>
             <div class="index-innlegg">
                 <h2>Generelt</h2>
-                <p>OsloMet – storbyuniversitetet er et moderne universitet med en lang historie som 
-                    strekker seg mer enn 200 år tilbake i tid. Gjennom årene har utdanningene ved OsloMet og 
-                    OsloMets forløpere bidratt til å forme det moderne velferdssamfunnet vi har i Norge.        
+                <p>OsloMet – storbyuniversitetet er et moderne universitet med en lang historie som
+                    strekker seg mer enn 200 år tilbake i tid. Gjennom årene har utdanningene ved OsloMet og
+                    OsloMets forløpere bidratt til å forme det moderne velferdssamfunnet vi har i Norge.
                 </p>
                 <p>Kilde: Jan Messel. (u.d) Fra: <a href="https://www.oslomet.no/om/historie">Oslomet</a></p>
                 <h2>Introduksjon</h2>
-                <p>Denne nettsiden er utformet med bakgrunn av eksamen i emnet DATA1200 Webutvikling og inkluderende. For mappeeksamen
-                har vi lagt totalt 4 sider: denne index-siden, to artikkelsider, en som omhandler Oslomet campus, og et angående 
-                sidens inklusiv design og hvordan vi har prøvd å gjøre nettsiden mer tilgjengelig og brukervennlig. Tilslutt har vi en emneside 
-                som handler om smarttelefoner. Denne siden har annerledes utforming og omhandler noe helt annet enn Oslomet.</p>
+                <p>Denne nettsiden er utformet med bakgrunn av eksamen i emnet DATA1200 Webutvikling og inkluderende.
+                    For mappeeksamen
+                    har vi lagt totalt 4 sider: denne index-siden, to artikkelsider, en som omhandler Oslomet campus, og
+                    et angående
+                    sidens inklusiv design og hvordan vi har prøvd å gjøre nettsiden mer tilgjengelig og brukervennlig.
+                    Tilslutt har vi en emneside
+                    som handler om smarttelefoner. Denne siden har annerledes utforming og omhandler noe helt annet enn
+                    Oslomet.</p>
             </div>
-            
+
         </div>
         <!-- Overskrift for framhevet artikler -->
         <div class="new-tabs-headings">
@@ -75,44 +82,50 @@
         <div class="index-highlights">
             <div class="articles">
                 <div class="articles-picture">
-                <img src="./images/sigmund-HE1zW44Zm_Y-unsplash.jpg" alt="bilde som viser PC som tilpasser for disability" 
-                class="cover-articles">
+                    <img src="./images/sigmund-HE1zW44Zm_Y-unsplash.jpg"
+                        alt="bilde som viser PC som tilpasser for disability" class="cover-articles">
                 </div>
                 <div class="articles-content">
-                 <!--Foto: fra nettsiden pexel.com. Foto av unplash. link til siden:https://unsplash.com/photos/person-holding-black-plastic-case-HE1zW44Zm_Y-->
-                    <a href="./accessibility.html"><h3>Hva er accessibility?</h3></a>
-                    <p>Tilgjengelighet handler om å sørge for at alle, uavhengig av evner eller funksjonshemminger, 
+                    <!--Foto: fra nettsiden pexel.com. Foto av unplash. link til siden:https://unsplash.com/photos/person-holding-black-plastic-case-HE1zW44Zm_Y-->
+                    <a href="./accessibility.html">
+                        <h3>Hva er accessibility?</h3>
+                    </a>
+                    <p>Tilgjengelighet handler om å sørge for at alle, uavhengig av evner eller funksjonshemminger,
                         kan få tilgang til og samhandle med et produkt, en tjeneste eller et miljø. </p>
                 </div>
             </div>
             <div class="articles">
                 <div class="articles-picture">
                     <!-- Foto:https://foto.oslomet.no/fotoweb/archives/5007-Arkitektur-ved-OsloMet/Folder%2052/CampusSommer-84.jpg.info -->
-                <img src="./images/oslomet_p35.jpg" alt="Skilting ved P32. Bilde tatt av Benjamin A. Ward/OsloMet" 
-                class="cover-articles">
+                    <img src="./images/oslomet_p35.jpg" alt="Skilting ved P32. Bilde tatt av Benjamin A. Ward/OsloMet"
+                        class="cover-articles">
                 </div>
-                <div class="articles-content" >
-                <a href="./campus.html"><h3>Oslomet Campus</h3></a>
-                <p>Bygget P35 befinner seg på Pilestredet 35, og er oppkalt etter Ellen Gleditsch, 
-                    som var en kjemiker og en kvinnesaksforkjemper. P35 er det største bygget på universitet.</p>
+                <div class="articles-content">
+                    <a href="./campus.html">
+                        <h3>Oslomet Campus</h3>
+                    </a>
+                    <p>Bygget P35 befinner seg på Pilestredet 35, og er oppkalt etter Ellen Gleditsch,
+                        som var en kjemiker og en kvinnesaksforkjemper. P35 er det største bygget på universitet.</p>
                 </div>
             </div>
             <div class="articles">
                 <div class="articles-picture">
-                <img src="./images/pexels-pixabay-356056.jpg" alt="skrivebord med pc, smartbrett, mobil og diverse" 
-                class="cover-articles">
+                    <img src="./images/pexels-pixabay-356056.jpg" alt="skrivebord med pc, smartbrett, mobil og diverse"
+                        class="cover-articles">
                 </div>
-                <div class="articles-content" >
-                    <a href="./topical.html"><h3>Universal design - Smartphones</h3></a>
+                <div class="articles-content">
+                    <a href="./topical.html">
+                        <h3>Universal design - Smartphones</h3>
+                    </a>
                     <p>Norwegian government chooses to implement the European Accessibility Act into Norwegian law.</p>
-                    </div>
+                </div>
             </div>
         </div>
 
     </div>
     <!-- Hoved-innhold slutt -->
-     <!-- Kart Oslomet -->
-     <div class="overskriftkart">
+    <!-- Kart Oslomet -->
+    <div class="overskriftkart">
         <h2>Hvordan komme seg frem til Oslomet</h2>
     </div>
 
@@ -134,13 +147,15 @@
 
                 <ul class="sosiale-medier">
                     <li>
-                        <a class="sosiale-link" href="https://www.facebook.com/oslomet/" aria-label="ikone til facebook">
+                        <a class="sosiale-link" href="https://www.facebook.com/oslomet/"
+                            aria-label="ikone til facebook">
                             <i class="fab fa-facebook"></i> <!--Facebook-ikon -->
                         </a>
 
                     </li>
                     <li>
-                        <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb" aria-label="Ikon til instagram">
+                        <a class="sosiale-link" href="https://www.instagram.com/oslomet/?hl=nb"
+                            aria-label="Ikon til instagram">
                             <i class="fab fa-instagram"></i><!-- Instagram-ikon -->
                         </a>
                     </li>
@@ -150,7 +165,8 @@
                         </a>
                     </li>
                     <li>
-                        <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/" aria-label="Ikon til linkedin">
+                        <a class="sosiale-link" href="https://no.linkedin.com/school/oslomet/"
+                            aria-label="Ikon til linkedin">
                             <i class="fab fa-linkedin-in"></i> <!-- LinkedIn-ikon -->
                         </a>
                     </li>
